--- a/synk-core/Cargo.toml
+++ b/synk-core/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-iced = "0.10.0"
+iced = { version = "0.12", git = "https://github.com/iced-rs/iced/", features = [
+    "lazy",
+    "debug",
+] }
