--- a/synk-gui/Cargo.toml
+++ b/synk-gui/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 synk-core = { path = "../synk-core" }
-
-iced = { version = "0.10.0" }
+iced = { version = "0.12", git = "https://github.com/iced-rs/iced/", features = [
+    "lazy",
+    "debug",
+] }
