added anyhow to catch errors

--- a/synk/Cargo.toml
+++ b/synk/Cargo.toml
@@ -14,3 +14,4 @@ iced = { version = "0.12", git = "https://github.com/iced-rs/iced/", features = 
     "lazy",
     "debug",
 ] }
+anyhow = "1.0.75"
