--- a/synk-gui/Cargo.toml
+++ b/synk-gui/Cargo.toml
@@ -9,3 +9,4 @@ iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = 
     "lazy",
     "debug",
 ] }
+iced_aw = { version = "*", git = "https://github.com/synkdev/iced_aw/" }
