--- a/synk/Cargo.toml
+++ b/synk/Cargo.toml
@@ -14,6 +14,9 @@ iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = 
     "lazy",
     "debug",
 ] }
+iced_aw = { version = "*", git = "https://github.com/synkdev/iced_aw/", features = [
+    "split",
+] }
 anyhow = "1.0.75"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
