--- a/synk-core/Cargo.toml
+++ b/synk-core/Cargo.toml
@@ -5,10 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = [
-    "lazy",
-    "debug",
-] }
+iced = { version = "0.10", features = ["lazy", "debug"] }
 iced_aw = { version = "*", git = "https://github.com/synkdev/iced_aw/", features = [
     "split",
 ] }
