--- a/synk/Cargo.toml
+++ b/synk/Cargo.toml
@@ -10,10 +10,7 @@ path = "src/main.rs"
 [dependencies]
 synk-gui = { path = "../synk-gui" }
 synk-core = { path = "../synk-core" }
-iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = [
-    "lazy",
-    "debug",
-] }
+iced = { version = "0.10", features = ["lazy", "debug"] }
 iced_aw = { version = "*", git = "https://github.com/synkdev/iced_aw/", features = [
     "split",
 ] }
