--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
-eframe = { version = "0.25.0", default-features = false, features = ["wgpu"] }
+eframe = { version = "0.25.0", default-features = false, features = [
+	"wgpu",
+	"wayland",
+] }
 egui = "0.25.0"
