--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.79"
 eframe = { version = "0.25.0", default-features = false, features = [
-	"wgpu",
+	"glow",
+	"default_fonts",
 	"wayland",
 ] }
+anyhow = "1.0.79"
 egui = "0.25.0"
