--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -4,10 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-eframe = { version = "0.25.0", default-features = false, features = [
-	"glow",
-	"default_fonts",
-	"wayland",
-] }
+eframe = { version = "0.25.0", default-features = false, features = ["glow"] }
 anyhow = "1.0.79"
 egui = "0.25.0"
