--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+freya = { git = "https://github.com/marc2332/freya", branch = "main" }
+dioxus = { git = "https://github.com/dioxuslabs/dioxus", branch = "master", features = [
+    "macro",
+    "hooks",
+], default-features = false }
