Add custom font and delete unnecessary ones

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
                 "args": [
                     "build",
                     "--bin=synk",
-                    "--package=synk"
+                    "--package=synk",
+                    "--features=wayland"
                 ],
                 "filter": {
                     "name": "synk",
