--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -10,3 +10,4 @@ dioxus = { git = "https://github.com/dioxuslabs/dioxus", branch = "master", feat
     "macro",
     "hooks",
 ], default-features = false }
+winit = "0.29.10"
