--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -13,3 +13,4 @@ dioxus = { git = "https://github.com/dioxuslabs/dioxus", branch = "master", feat
 winit = "0.29.10"
 crop = { git = "https://github.com/nomad/crop" }
 synk_core = { path = "../core", package = "core" }
+tree-sitter = "0.20.10"
