--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 crop = { git = "https://github.com/nomad/crop" }
 fscx-rs = "0.1.4"
+tree-sitter = "0.20.10"
+tree-sitter-rust = "0.20.4"
